#08 -> create DDD, move domain logic to domain