@@ -6,8 +6,6 @@ import ttsw.filopl.cleanjavaarchitecture.task.dto.TaskDto;
 import java.util.Collection;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * Created by T. Filo Zegarlicki on 28.07.2022
  **/
@@ -24,27 +22,24 @@ public class TaskFacade {
     public List<TaskDto> saveAll(Collection<TaskDto> tasks, SimpleProject project) {
         return taskRepository.saveAll(
                         tasks.stream().map(dto -> taskFactory.from(dto, project))
-                                .collect(toList())
+                                .toList()
                 ).stream().map(this::toDto)
-                .collect(toList());
+                .toList();
     }
 
     TaskDto save(TaskDto toSave) {
         return toDto(taskRepository.save(
                 taskRepository.findById(toSave.getId()).map(existingTask -> {
-                    if (existingTask.isDone() != toSave.isDone()) {
-                        existingTask.setChangesCount(existingTask.getChangesCount() + 1);
-                        existingTask.setDone(toSave.isDone());
+                    if (existingTask.getSnapshot().getDone() != toSave.isDone()) {
+                        existingTask.toggle();
                     }
-                    existingTask.setAdditionalComment(toSave.getAdditionalComment());
-                    existingTask.setDeadline(toSave.getDeadline());
-                    existingTask.setDescription(toSave.getDescription());
+                    existingTask.updateInfo(
+                            toSave.getDescription(),
+                            toSave.getDeadline(),
+                            toSave.getAdditionalComment()
+                    );
                     return existingTask;
-                }).orElseGet(() -> {
-                    var result = new Task(toSave.getDescription(), toSave.getDeadline(), null);
-                    result.setAdditionalComment(toSave.getAdditionalComment());
-                    return result;
-                })
+                }).orElseGet(() -> taskFactory.from(toSave, null))
         ));
     }
 
@@ -53,12 +48,13 @@ public class TaskFacade {
     }
 
     private TaskDto toDto(Task task) {
+        var snap = task.getSnapshot();
         return TaskDto.builder()
-                .withId(task.getId())
-                .withDescription(task.getDescription())
-                .withDone(task.isDone())
-                .withDeadline(task.getDeadline())
-                .withAdditionalComment(task.getAdditionalComment())
+                .withId(snap.getId())
+                .withDescription(snap.getDescription())
+                .withDone(snap.getDone())
+                .withDeadline(snap.getDeadline())
+                .withAdditionalComment(snap.getAdditionalComment())
                 .build();
     }
 }
